# hello-raytracing

./: .gitignore  Cargo.toml  README.md
src/: app.rs  camera_controller.rs  gui.rs  lib.rs  main.rs  renderer-obj.rs  renderer.rs  renderer_tris.rs  shader-obj.wgsl  shader.wgsl  shader_obj.wgsl
src/geometry/: mesh.rs  mod.rs  vertex.rs
src/scene/: camera.rs  material.rs  mod.rs  render_ppm.rs  scene_sphere.rs  scene_tris.rs  sphere.rs  triangle.rs
src/scene/bvh/: mod.rs  node.rs  tree.rs  triangle.rs
src/shaders/: shader_sphere.wgsl  shader_tris.wgsl
tests/: README.md  rendering_tests.rs
tests/golden/: camera_position.ppm  complex.ppm  depth_of_field.ppm  dielectric_materials.ppm  lambertian_materials.ppm  materials.ppm  metal_materials.ppm  shadow_rendering.ppm
