[package]
name = "wgsl_toy"
version = "0.2.0"
edition = "2021"

[dependencies]
winit = "0.29.10"
env_logger = "0.10"
log = "0.4"
wgpu = "^0.19.1"
bytemuck = { version = "1.12", features = [ "derive" ] }
pollster = "0.3.0"
glam = { version = "0.24.2", features = [ "bytemuck" ] }
rand = "0.8.5"
tobj = "4.0.0"
